Updated Webpage Name

--- a/asti_project_root/templates/layout.html
+++ b/asti_project_root/templates/layout.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark shadow small mb-3">
         <div class="container-fluid">
             <a href="/" class="navbar-brand">
-                <samp class="brand-gradient">SFN VLOG</samp>
+                <samp class="brand-gradient">Employee Manager App</samp>
             </a>
 
             <button
